Import of DRRHO/TM-Easy-0.02 from CPAN.
gitpan-cpan-distribution: TM-Easy
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DRRHO/TM-Easy-0.02.tar.gz
gitpan-cpan-author:       DRRHO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension TM::Easy.
 
+0.02  ?????????????????????????????
+	- added .ctm and .xtm extensions to be detected at new()
+
 0.01  Thu Apr 10 17:32:42 CEST 2008
 	- initial release
 
