--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension TM::Easy.
 
+0.03  Sun Jun 13 21:05:05 CEST 2010
+        - fix: strange problems with subject identifiers workaround-ed (rho)
+
 0.02  ?????????????????????????????
 	- added .ctm and .xtm extensions to be detected at new()
 
